to do: - code: write tests for existing code - check for minor bugs
completed:
- npm i --save-dev @types/luxon
- npm postcss autoprefixer
- created postcss.config
- created pagination on Home.ts
- created simple Footer
- created global.d.ts
- created alerts.ts and flash.ts
- style: home, nav, login and register
- style: changed alerts to be user friendly
- updated vite.config, package-, package-lock.json
- updated root in styles.css
- updated index.html to have bg color and overflow-x-hidden

--- a/index.html
+++ b/index.html
@@ -3,11 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <script
+      src="https://kit.fontawesome.com/49c1127b94.js"
+      crossorigin="anonymous"
+    ></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>auction_web</title>
   </head>
-  <body>
-    <div id="app"></div>
+  <body class="overflow-x-hidden">
+    <div id="app" class="bg-bg"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
