--- a/index.html
+++ b/index.html
@@ -2,15 +2,46 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Fav icon -->
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="/public/auction-law-svgrepo-com.svg"
+    />
+
+    <!-- Fontawesome -->
     <script
       src="https://kit.fontawesome.com/49c1127b94.js"
       crossorigin="anonymous"
     ></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>auction_web</title>
+
+    <!-- SEO Tags - search engine tags -->
+    <meta
+      name="description"
+      content="Browse and bid on exclusive items at our online auction platform."
+    />
+    <meta
+      name="keywords"
+      content="online auction, live bidding, auction platform, real-time auctions, bidding website, online marketplace"
+    />
+    <meta name="author" content="R3N8" />
+
+    <!-- Open Graph Tags - how website will look when sharing link on different types of social platforms -->
+    <meta property="og:title" content="SwiftBids - Online Auction Platform" />
+    <meta
+      property="og:description"
+      content="Join SwiftBids to browse items, place live bids, and compete for exclusive items in a fast and interactive auction experience."
+    />
+    <meta property="og:type" content="website" />
+
+    <!-- Title -->
+    <title>SwiftBids</title>
   </head>
-  <body class="overflow-x-hidden">
+
+  <!-- App -->
+  <body class="overflow-x-hidden height-100dvh">
     <div id="app" class="bg-bg"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
